<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <!--
         <com.hhj.circlemenu.HealthView
                android:id="@+id/healthView"
                android:layout_width="match_parent"
                android:layout_height="530dp"
                android:layout_margin="15dp"
                health:lineColor="@color/font_tips"
                health:titleColor="@color/textcolor"
                health:titleSize="50dp" />
    -->
    <!--
                <com.hhj.circlemenu.PathView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                 />
    -->
    <include 
        android:id="@+id/page_topbar"
        layout="@layout/fragment_page_topbar" 
        />
    <com.hhj.circlemenu.CircleMenuView
        android:id="@+id/circle_menu_view_boold_pressure"
        android:layout_width="240dp"
        android:layout_height="250dp"
        android:layout_below="@id/page_topbar"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        app:center_text="@string/app_name"
        app:gap_color="@color/white"
        app:gap_size="3dp"
        app:inside_cirle_radius="60dp"
        app:menu_item_background="@array/metu_item_background"
        app:menu_text="@array/blood_pressure_text"
        app:menu_text_size="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/circle_menu_view_boold_pressure"
        android:layout_marginTop="-10dp"
        android:weightSum="3" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tv_diastolic_blood_pressure_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="173"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tv_diastolic_blood_pressure_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_diastolic_blood_pressure_value"
                android:gravity="center"
                android:text="@string/diastolic_blood_pressure"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_diastolic_blood_pressure_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_diastolic_blood_pressure_label"
                android:gravity="center"
                android:text="mmHg"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tv_systolic_blood_pressure_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="173"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tv_systolic_blood_pressure_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_systolic_blood_pressure_value"
                android:gravity="center"
                android:text="@string/systolic_blood_pressure"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_systolic_blood_pressure_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_systolic_blood_pressure_label"
                android:gravity="center"
                android:text="mmHg"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tv_pulse_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="173"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/tv_pulse_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_pulse_value"
                android:gravity="center"
                android:text="@string/pulse"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_pulse_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_pulse_label"
                android:gravity="center"
                android:text="bmp"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/title_color"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:id="@+id/rlayout_bind_prompt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/iv_bind_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_bind"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:scaleType="centerInside"/>

            <TextView
                android:id="@+id/tv_bind_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_bind_prompt"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/unbind"
                android:textSize="18sp" 
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlayout_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/iv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_bind"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:scaleType="centerInside"/>

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_setting"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
<!--     <FrameLayout 
        android:id="@+id/layout_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        
    </FrameLayout> -->
</RelativeLayout>